Updated project to fix openshift

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -80,6 +80,34 @@ a:link {
   text-decoration: none;
 }
 
+.note
+{
+    text-align: center;
+    height: 80px;
+    background: -webkit-linear-gradient(left, #f87676, #ff5a5a);
+    color: #fff;
+    font-weight: bold;
+    line-height: 80px;
+}
+.form-content
+{
+    padding: 5%;
+    border: 1px solid #ced4da;
+    margin-bottom: 2%;
+}
+.form-control{
+    border-radius:1.5rem;
+}
+.btnSubmit
+{
+    border:none;
+    border-radius:1.5rem;
+    padding: 1%;
+    width: 20%;
+    cursor: pointer;
+    background: #0062cc;
+    color: #fff;
+}
 
 /* .main { */
   .main-section {
